...
    android:layout_height="match_parent"
    android:background="@drawable/all_hobby"
    tools:context="at.sw2017.xp4.hobit.FacebookLogin"
    android:weightSum="1">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="0.02"
...
        android:hint="Password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:text="Login" />

    <Button
        android:id="@+id/register"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
...
